--- a/Notebook/ACL.tex
+++ b/Notebook/ACL.tex
@@ -294,7 +294,7 @@ ACLs can be used to mitigate IP address spoofing and denial of service (DoS) att
 \begin{figure}[hbtp]
   \caption{Antispoofing with ACLs}\label{AntispoofingACL}
   \centering
-  \includegraphics[width=10\xm]{pictures/AntispoofingACL.PNG}
+  \includegraphics[scale=0.5]{pictures/AntispoofingACL.PNG}
   \end{figure}
 
 Hackers can use ICMP echo packets (pings) to discover network, generate DoS flood attacks, or alter host routing tables. Both ICMP echo and redirect messages should be blocked \emph{inbound} by the router. Several ICMP messages are recommended for proper network operation and should be allowed into the internal network:
