--- a/Security/main.tex
+++ b/Security/main.tex
@@ -16,6 +16,7 @@
 \include{4-Firewall}
 \include{5-IPS}
 \include{6-SecuringLAN}
+\include{Cryptography}
 \include{7-VPN}
 \include{8-ASA}
 \include{9-ASDM}
